--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,22 +5,33 @@
 }
 
 main {
-    height: 100vh;
+    height: calc(100vh - 38.75px);
 }
 
 body {
     font-family: sans-serif;
+    color: #2a2a2a;
+    background-color: whitesmoke;
 }
 
 button,
 textarea,
 input,
-select {
+select,
+a {
     font-size: inherit;
     font-family: inherit;
+    color: inherit;
+}
+
+.content-container {
+    width: fit-content;
+    padding: 2rem;
+    margin: 0 auto;
 }
 
 nav {
+    background-color: white;
     padding: 10px 20px;
 
     & button {
@@ -46,8 +57,7 @@ nav {
     }
 
     & li a.active {
-        text-decoration: underline;
-        text-underline-offset: 3px;
+        font-weight: bold;
     }
 }
 
@@ -55,4 +65,58 @@ nav {
     max-width: 400px;
     padding: 2rem;
     margin: 0 auto;
+}
+
+/* Protected Data Page */
+#protected-data-container {
+    margin: 4rem auto 0;
+    background-color: white;
+
+    & form {
+        max-width: 500px;
+        display: flex;
+        gap: 0.4rem;
+        flex-direction: column;
+        margin: 2rem 0;
+
+        & label {
+            font-weight: 700;
+        }
+
+        & button[type='submit'] {
+            width: fit-content;
+            display: flex;
+            transition: background-color 200ms;
+            gap: 5px;
+            border: none;
+            align-items: center;
+            padding: 3px 10px;
+            margin: 1rem 0 0;
+        }
+    }
+}
+
+/* Test Data Page */
+table,
+td {
+    border: 1px solid lightgrey;
+    border-collapse: collapse;
+    padding: 5px;
+}
+
+thead {
+    font-weight: 700;
+}
+
+tbody {
+    background-color: white;
+}
+
+#table-details {
+    margin: 0 0 1rem;
+
+    & h2 {
+        margin: 0 0 0.3rem;
+        font-size: 2.3rem;
+    }
 }
