add override for MUI component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,28 +1,8 @@
 @import 'tailwindcss';
 @custom-variant dark (&:where(.dark, .dark *));
 
-:root {
-  --darkTheme01: #101010;
-  --darkTheme02: #151515;
-  --darkTheme03: #1a1a1a;
-  --darkTheme04: #1e1e1e;
-  --darkTheme05: #242424;
-  --darkTheme06: #3c3c3c;
-  --darkTheme07: #858585;
-  --darkTheme08: #dedede;
-
-  --lightTheme01: #ffffff;
-  --lightTheme02: #e9e7e4;
-  --lightTheme03: #aeaeae;
-  --lightTheme04: #8d8d8d;
-  --lightTheme05: #525252;
-  --lightTheme06: #313131;
-  --lightTheme07: #212121;
-  --lightTheme08: #161616;
-}
-
 main {
-  min-height: calc(100vh - 40px);
+  min-height: calc(100vh - 52px);
 }
 
 body {
@@ -43,6 +23,13 @@ nav li {
   font-family: 'Lato';
 }
 
+#countries-container {
+  min-height: calc(100vh - 52px);
+}
+
+/*
+Spinner: Earth animation
+*/
 @keyframes EarthSpin {
   from {
     background-position-x: -200%;
@@ -61,4 +48,34 @@ nav li {
   animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+
+  /* 
+  3D-effect
+  box-shadow: inset 0.4rem 0.2rem 2rem 20px,
+    inset 0px 0px 2px var(--color-slate-800);
+    */
+}
+
+/* 
+Custom override for MUI Pagination component 
+*/
+.dark .css-1bug3cd-MuiButtonBase-root-MuiPaginationItem-root,
+.css-btxnvc-MuiPaginationItem-root {
+  color: oklch(0.929 0.013 255.508) !important;
+
+  &:not(div):hover {
+    background-color: #091225;
+  }
+
+  &:disabled {
+    color: oklch(0.704 0.04 256.788);
+  }
+
+  &[aria-current='page'] {
+    background-color: oklch(0.457 0.24 277.023);
+
+    &:hover {
+      background-color: oklch(0.511 0.262 276.966);
+    }
+  }
 }
