--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,14 +49,13 @@ main {
     }
   }
 
-  & .home-heart {
-    width: 24px; /* pathのサイズ */
-    height: 24px; /* pathのサイズ */
-    background: #ff5252; /* 色 */
-    clip-path: path(
-      'M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z'
-    );
-    transform: scale(5);
+  /*
+  Home page Hover effect
+  */
+  & .custom-hover-translate-y {
+    & > a:hover {
+      transform: translateY(-5px);
+    }
   }
 }
 
