--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -161,3 +161,10 @@ Custom override for MUI Pagination component
 .dark .MuiPaginationItem-ellipsis {
   color: oklch(0.882 0.059 254.128) !important;
 }
+
+@media screen and (max-width: 861px) {
+  .header-content {
+    justify-content: center;
+    padding: 0.3rem;
+  }
+}
